Chapter skeleton and proposal

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -485,15 +485,6 @@ doi = {10.1109/TASL.2013.2239989},
 url = {https://arpi.unipi.it/retrieve/handle/11568/159584/458549/tasl.pdf}
 }
 
-@misc{bayesian,
-      title={A Tutorial on Bayesian Optimization}, 
-      author={Peter I. Frazier},
-      year={2018},
-      eprint={1807.02811},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
-}
-
 @article{tftradeoff1,
 author = {Simpson, Andrew},
 year = {2015},
@@ -603,4 +594,15 @@ booktitle = {INTERSPEECH -- 16th Annual Conference of the International Speech C
       eprint={1910.09266},
       archivePrefix={arXiv},
       primaryClass={cs.SD}
+}
+
+@inproceedings{musicsepsurvey,
+author={Ruolun Liu and Suping Li},
+booktitle={2009 IEEE Youth Conference on Information, Computing and Telecommunication},
+title={A review on music source separation},
+year={2009},
+volume={},
+number={},
+pages={343-346},
+doi={10.1109/YCICT.2009.5382353}
 }
